# switchboard-plug-terminal

./: Config.vala  README.md  meson.build  plug.plugin
src/: Plug.vala  Settings.vala
